# forge

./: .dockerignore  .gitignore  Cargo.toml  HANDOFF.md  README.md  justfile  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
crates/forge-auth/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml
crates/forge-auth/migrations/: 0001_init.sql  0002_client_credentials.sql
crates/forge-auth/src/: api.rs  app.rs  bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  me.rs  ratelimit.rs  session.rs  state.rs  util.rs
crates/forge-auth/src/admin/: clients.rs  keys.rs  mod.rs  providers.rs  roles.rs  sessions.rs  users.rs
crates/forge-auth/src/db/: clients.rs  keys.rs  mod.rs  models.rs  providers.rs  sessions.rs  tokens.rs  users.rs
crates/forge-auth/src/login/: dev.rs  mod.rs
crates/forge-auth/src/oidc/: authorize.rs  client_auth.rs  discovery.rs  end_session.rs  introspect.rs  mod.rs  revoke.rs  token.rs  userinfo.rs
crates/forge-auth/src/tokens/: access.rs  keys.rs  mod.rs
crates/forge-auth/src/upstream/: github.rs  ldap.rs  linking.rs  mod.rs  oidc.rs
crates/forge-auth/tests/: dev_login.rs  oidc_flow.rs
crates/forge-blocks/: Cargo.toml
crates/forge-blocks/src/: address.rs  convert.rs  emoji.rs  id.rs  inline.rs  lib.rs  ops.rs  sample.rs  schema.rs
crates/forge-blocks/tests/: ops.rs  schema.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: actions.rs  claims.rs  docstore.rs  envelope.rs  error.rs  events.rs  health.rs  lib.rs
crates/forge-core/src/widgets/: coalesce.rs  mod.rs  proto.rs  rdp.rs  vnc.rs
crates/forge-core/src/widgets/keymap/: mod.rs  scancode.rs
crates/forge-core/src/widgets/term/: local.rs  mod.rs  ssh.rs
crates/forge-egui/: Cargo.toml  README.md
crates/forge-egui/examples/: feedback_overlays.rs
crates/forge-egui/src/: error.rs  lib.rs  response.rs  rt.rs
crates/forge-egui/src/runtime/: dialogs.rs  fx.rs  mod.rs  shell.rs  toaster.rs
crates/forge-egui/src/theme/: apply.rs  chart_palette.rs  color.rs  fonts.rs  mod.rs  palette.rs  tokens.rs
crates/forge-egui/src/widgets/: mod.rs  stream.rs  term.rs  util.rs
crates/forge-egui/src/widgets/charts/: bar.rs  gantt.rs  legend.rs  line.rs  mod.rs  pie.rs  sparkline.rs  ticks.rs
crates/forge-egui/src/widgets/date/: calendar.rs  date_picker.rs  mod.rs
crates/forge-egui/src/widgets/desktop/: keys.rs  mod.rs
crates/forge-egui/src/widgets/feedback/: alert.rs  mod.rs  progress.rs  spinner.rs  toast.rs
crates/forge-egui/src/widgets/forms/: checkbox.rs  combobox.rs  field.rs  form.rs  input.rs  list_box.rs  mod.rs  radio_group.rs  select.rs  slider.rs  textarea.rs  toggle.rs  toggle_group.rs
crates/forge-egui/src/widgets/overlays/: menu.rs  mod.rs  modal.rs  popover.rs  sheet.rs  tooltip.rs
crates/forge-egui/src/widgets/primitives/: avatar.rs  badge.rs  button.rs  card.rs  empty.rs  eyebrow.rs  grid.rs  icon.rs  kbd.rs  mod.rs  separator.rs  skeleton.rs  stat.rs  status_dot.rs
crates/forge-egui/src/widgets/specialty/: code.rs  flowchart.rs  markdown.rs  mod.rs  node_graph.rs
crates/forge-egui/src/widgets/structure/: crumbs.rs  mod.rs  (+6 more)
crates/forge-egui/tests/: blocks.rs  charts.rs  data.rs  forms.rs  node_graph.rs  overlays.rs  primitives.rs  specialty.rs  stream.rs  theme.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: actions.rs  app.rs  components.rs  docstore.rs  envelope.rs  error.rs  frontend.rs  health.rs  lib.rs  state.rs
crates/forge-server/src/auth/: extract.rs  jwt.rs  mod.rs  routes.rs  users.rs
crates/forge-server/src/events/: mod.rs  sse.rs  ws.rs
crates/forge-server/src/widgets/: mod.rs  proto.rs  rdp.rs  term.rs  vnc.rs
crates/forge-server/tests/: actions.rs  auth.rs  desktop_ws.rs  docstore.rs  events.rs  frontend.rs  term_ws.rs  widgets_ws.rs
crates/forge-server/tests/common/: mod.rs
crates/forge-tauri/: Cargo.toml  build.rs
crates/forge-tauri/permissions/: default.toml
crates/forge-tauri/permissions/autogenerated/: reference.md
crates/forge-tauri/permissions/schemas/: schema.json
crates/forge-tauri/src/: bridge.rs  commands.rs  lib.rs  state.rs  widget_stream.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: error.rs  event.rs  lib.rs  text.rs
crates/forge-tui/src/runtime/: dialogs.rs  focus.rs  fx.rs  mod.rs  overlay.rs  shell.rs  toaster.rs
crates/forge-tui/src/theme/: chart_palette.rs  color.rs  mod.rs  palette.rs
crates/forge-tui/src/widgets/: mod.rs
crates/forge-tui/tests/: blocks.rs  fx.rs  mouse.rs  snapshots.rs  states.rs  states_phase2.rs  states_phase3.rs  states_phase4.rs  theme.rs
crates/forge-tui/tests/snapshots/: blocks__focused_paragraph_shows_raw_source.snap  blocks__sample_document_read_only_snapshot.snap  snapshots__badge_and_kbd_and_status.snap  snapshots__bordered_button_focus_ring.snap  snapshots__button_variants.snap  snapshots__card_stat_and_alert.snap  snapshots__input_renders_value_cursor_and_placeholder.snap
examples/auth-demo/: Cargo.toml
examples/auth-demo/src/: main.rs
examples/egui-demo/: Cargo.toml
examples/egui-demo/src/: backend.rs  main.rs
examples/egui-demo/src/pages/: actions.rs  desktop.rs  docs.rs  events.rs  mod.rs  term.rs
examples/egui-gallery/: Cargo.toml
examples/egui-gallery/src/: main.rs
examples/egui-gallery/src/sections/: blocks.rs  board.rs  charts.rs  chat.rs  code.rs  data.rs  date.rs  effects.rs  feedback.rs  files.rs  flow.rs  forms.rs  graph.rs  mod.rs  overlays.rs  pickers.rs  primitives.rs  structure.rs  term.rs  text.rs
examples/tauri-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-demo/src-tauri/capabilities/: default.json
examples/tauri-demo/src-tauri/icons/: icon.icns
examples/tauri-demo/src-tauri/src/: main.rs
python/forge-server/: README.md  pyproject.toml
python/forge-server/src/forge_server/: __init__.py  actions.py  app.py  auth.py  components.py  config.py  docstore.py  envelope.py  events.py  hash.py  static.py
python/forge-server/tests/: conftest.py  test_actions.py  test_auth.py  test_docstore.py  test_events.py  test_static.py
(+248 files in other folders)
