[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-server",
    "crates/forge-auth",
    "crates/forge-tui",
    "examples/rust-demo",
    "examples/auth-demo",
    "examples/tui-gallery",
]
# Tauri crates are standalone workspaces: tauri pulls wry/tao/gtk, which would
# force webkit system deps onto every root build and rust-analyzer session.
# Build them via `just tauri-*` recipes instead.
exclude = ["crates/forge-tauri", "examples/tauri-demo/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wiltaylor/forge"

[workspace.dependencies]
forge-core = { path = "crates/forge-core" }
forge-server = { path = "crates/forge-server" }
forge-tui = { path = "crates/forge-tui" }

# RSA keygen and argon2 are unusably slow without optimization; keep the
# crypto stack optimized even in debug builds.
[profile.dev.package.rsa]
opt-level = 3
[profile.dev.package.num-bigint-dig]
opt-level = 3
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.blake2]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3

# Vendored ironrdp-session 0.10.0 with the xrdp bitmap-stride fix applied
# (upstream issue Devolutions/IronRDP#1251; based on unmerged PR #1252 with
# corrected source strides). xrdp pads bitmap width to a multiple of 4 while
# the destination rectangle keeps the true size; unpatched, IronRDP blits with
# the rect width as row stride, shearing every tile diagonally. Drop this once
# upstream ships a release with the fix.
[patch.crates-io]
ironrdp-session = { path = "vendor/ironrdp-session" }
