[package]
name = "forge-auth"
description = "OIDC identity provider for the Forge ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Password-less "pick a user" login for development. Compile-time only, so a
# production binary cannot be talked into exposing it.
dev-login = []

[dependencies]
forge-server = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "migrate"] }
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
openidconnect = "4"
oauth2 = "5"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
