[package]
name = "forge-blocks"
description = "Forge block document model — the cross-platform page-builder contract shared by web, TUI, and egui editors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
unicode-width = "0.2"

# Inline markdown parsing for renderers — see [features]
pulldown-cmark = { version = "0.12", optional = true, default-features = false }

[features]
default = ["md"]
md = ["dep:pulldown-cmark"]
