[package]
name = "forge-server"
description = "Batteries-included backend layer for Forge apps: auth, doc store, actions, events, static frontend."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["embed"]
embed = ["dep:rust-embed"]
cli = []
# Interactive remote-access widgets (see docs/widgets-protocol.md). Not part of
# the frozen v1.0 API contract; /api/term exposes a real shell to authenticated
# users, so these are opt-in at compile time AND at runtime (with_* builders).
# Session engines live in forge-core; these are passthroughs.
term = ["forge-core/term"]
term-ssh = ["term", "forge-core/term-ssh"]
vnc = ["forge-core/vnc"]
rdp = ["forge-core/rdp"]
widgets = ["term", "term-ssh", "vnc", "rdp"]

[[bin]]
name = "forge-hash"
path = "src/bin/forge-hash.rs"
required-features = ["cli"]

[dependencies]
forge-core = { workspace = true }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
rust-embed = { version = "8", features = ["mime-guess"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Matches the tokio-tungstenite version axum 0.8 uses internally.
tokio-tungstenite = "0.29"
futures-util = "0.3"
tempfile = "3"
