[package]
name = "egui-demo"
description = "forge-egui backend-integration demo — forge-core DocStore/actions/events in-process, plus the streaming widgets"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Streaming widgets are opt-in.
forge-egui = { workspace = true, features = ["full", "term", "term-ssh", "vnc", "rdp"] }
forge-core = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde_json = "1"
# For the env-gated self-screenshot hook (FORGE_DEMO_SHOT).
image = { version = "0.25", default-features = false, features = ["png"] }
