[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-server"
version = "0.1.0"
description = "Lightweight Python backend for Forge hack tools (frozen Forge API contract v1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=13",
    "pyjwt>=2.9",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23"]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
    "argon2-cffi>=23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forge_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
